Attempted Scrollbar fix.

--- a/css/style-atlantic-titan.css
+++ b/css/style-atlantic-titan.css
@@ -22,6 +22,7 @@
 }
 
 body {
+  scrollbar-width: none;
   font-family: "Nanum+Gothic", sans-serif;
   line-height: 1.4;
   background: var(--light-color);
